Added minor commit to Bubble sort algorithm

--- a/bubbleSortingAlgorithm.html
+++ b/bubbleSortingAlgorithm.html
@@ -38,6 +38,7 @@
     document.write("<br>");
     document.write("<h3>Sorted List </h3>");
 
+    //Printing the list
     document.write('<p>');
     for (var i = 0; i < scores.length; i++) {
         document.write(scores[i] + ", ");
